[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Pawel Wolff"}]
name = "flexpart_output"
version = "0.1"
dependencies = [
  "numpy >= 1.23.5",
  "pandas >= 1.5.2",
  "xarray >= 2023.6.0",
  "h5netcdf >= 1.3.0",
  "dask >= 2023.3.0",
  "xarray_extras@git+https://github.com/pawel-wolff/xarray_extras.git"
]
requires-python = ">= 3.9"
readme = "README.md"
